Spelling - Bee Wiggle

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
    
 
         <video id ="bee-background" autoplay loop muted>
-          <source src="images/beewiggle.m4v" type="video/mp4">
+          <source src="images/BeeWiggle.m4v" type="video/mp4">
           
           Your browser does not support the video tag.
          
