Updated Spelling - about

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
               </div>
 
               <div class= "col-md-4">
-                    <img id= "beeStanding" src="images/bee.png">
+                    <img id= "beeStanding" src="images/Bee.png">
                     <p><span id ="royal">"a bee is an exquisite chemist."</span><br><span id ="royalName">royal beekeeper to charles ii</span></p>
 
               </div>
