Update web for Safari. Update Image on Galleries

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
         <video id ="bee-background" autoplay loop muted>
           <source src="images/BeeWiggle.m4v" type="video/mp4">
+          <source src="images/BeeWiggle.webm" type="video/webm">
           
           Your browser does not support the video tag.
          
