--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         
    
 
-        <video id ="bee-background" autoplay loop muted>
+        <video loop controls='true' id ="bee-background" autoplay loop muted>
           <source src="images/BeeWiggle.m4v" type="video/mp4">
           <source src="images/BeeWiggle.webm" type="video/webm">
           
