Audio and bee wiggle

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
       <div class= "row" id= "header">
 
       <img id ="bee-header" src="images/header-image.png">
+
+            <audio id="myAudio" src="audio/Beesound.mp3" preload="auto">
+            </audio>
+
+            <a class="col-md-12" id="myAudio" onClick="togglePlay()">Click here to get bzzzz'd.</a>
+
         <p class "col-md-4" id= "elevation"> ELEVATION: 1080M</p>
 
       </div>
@@ -45,7 +51,6 @@
               <a class="active" href="produce.html"><button class="btn" id= "btn4">Produce</button></a>
               <a class="active" href="about.html"><button class="btn" id= "btn5">About</button></a>
 
-        <a href="#" title="Play video" class="play"></a>
 
    
 
@@ -75,6 +80,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="js/vendor/bootstrap.min.js"></script>
     <script src="js/custom.js" type="text/javascript"></script>
-    
+
     
  </body>
