--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <audio id="myAudio" src="audio/Beesound.mp3" preload="auto">
             </audio>
 
-            <a class="col-md-12" id="myAudio" onClick="togglePlay()">Click here to get bzzzz'd.</a>
+            <a class="col-md-12 col-sm-12 col-xs-12" id="myAudio" onClick="togglePlay()">Click here to get bzzzz'd.</a>
 
         <p class "col-md-4" id= "elevation"> ELEVATION: 1080M</p>
 
